--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,10 @@
             <a href="{{ url_for('project.get_projects') }}" class="btn btn-primary btn-lg">
                 <i class="fas fa-project-diagram me-2"></i> عرض المشاريع
             </a>
-            <a href="{{ url_for('project.new_project') }}" class="btn btn-success btn-lg ms-2">
-                <i class="fas fa-plus me-2"></i> إضافة مشروع جديد
-            </a>
+            
+			<a href="{{ url_for('project.new_project') }}" class="btn btn-success">
+				<i class="fas fa-plus me-1"></i> إضافة مشروع جديد
+			</a>
         </div>
     </div>
 </div>
