--- a/templates/items/index.html
+++ b/templates/items/index.html
@@ -43,7 +43,7 @@
                             <th>التكلفة الإفرادية</th>
                             <th>التكلفة الإجمالية</th>
                             <th>الكمية الفعلية</th>
-                            <th>التكلفة الفعلية</th>
+                            <th>التكلفة الإفرادية الفعلية</th> <th>التكلفة الفعلية الإجمالية</th>
                             <th>الوفر/الزيادة</th>
                             <th>الحالة</th>
                             <th>الإجراءات</th>
@@ -59,6 +59,7 @@
                             <td class="text-end">{{ "{:,.2f}".format(item.contract_unit_cost) }}</td>
                             <td class="text-end">{{ "{:,.2f}".format(item.contract_total_cost) }}</td>
                             <td class="text-end">{{ "{:,.2f}".format(item.actual_quantity) if item.actual_quantity else "-" }}</td>
+                            <td class="text-end">{{ "{:,.2f}".format(item.actual_unit_cost) if item.actual_unit_cost else "-" }}</td>
                             <td class="text-end">{{ "{:,.2f}".format(item.actual_total_cost) if item.actual_total_cost else "-" }}</td>
                             <td class="text-end {{ 'text-success' if item.cost_variance > 0 else 'text-danger' if item.cost_variance < 0 else '' }}">
                                 {{ "{:,.2f}".format(item.cost_variance) if item.cost_variance != 0 else "-" }}
@@ -76,7 +77,7 @@
                                     <button type="button" class="btn btn-info item-details" data-id="{{ item.id }}" title="تفاصيل">
                                         <i class="fas fa-eye"></i>
                                     </button>
-                                    <button type="button" class="btn btn-danger delete-item" data-id="{{ item.id }}" title="حذف">
+                                    <button type="button" class="btn btn-danger delete-item" data-id="{{ item.id }}" data-bs-toggle="modal" data-bs-target="#deleteItemModal" title="حذف">
                                         <i class="fas fa-trash"></i>
                                     </button>
                                 </div>
@@ -88,8 +89,7 @@
                         <tr class="table-primary">
                             <th colspan="5">الإجمالي</th>
                             <th class="text-end">{{ "{:,.2f}".format(project.total_contract_cost) }}</th>
-                            <th></th>
-                            <th class="text-end">{{ "{:,.2f}".format(project.total_actual_cost) if project.total_actual_cost else "-" }}</th>
+                            <th colspan="2"></th> <th class="text-end">{{ "{:,.2f}".format(project.total_actual_cost) if project.total_actual_cost else "-" }}</th>
                             <th class="text-end {{ 'text-success' if project.total_savings > 0 else 'text-danger' if project.total_savings < 0 else '' }}">
                                 {{ "{:,.2f}".format(project.total_savings) if project.total_savings != 0 else "-" }}
                             </th>
@@ -132,9 +132,9 @@
             <div class="col-md-4 mb-3">
                 <div class="card bg-light">
                     <div class="card-body text-center">
-                        <h5 class="card-title">نسبة الإنجاز</h5>
+                        <h5 class="card-title">نسبة إنجاز البنود (بالعدد)</h5>
                         <div class="progress mt-2" style="height: 25px;">
-                            <div class="progress-bar bg-success" role="progressbar" style="width: {{ project.completion_percentage }}%">
+                            <div class="progress-bar bg-info" role="progressbar" style="width: {{ project.completion_percentage }}%">
                                 {{ "{:.1f}%".format(project.completion_percentage) }}
                             </div>
                         </div>
@@ -144,6 +144,37 @@
         </div>
     </div>
 </div>
+
+<div class="card mb-4">
+    <div class="card-header bg-dark text-white">
+        <h3 class="mb-0">الملخص المالي للمشروع</h3>
+    </div>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-md-3">
+                <h5>التكلفة التعاقدية</h5>
+                <p class="fs-4 text-primary">{{ "{:,.2f}".format(project.total_contract_cost) }} ريال</p>
+            </div>
+            <div class="col-md-3">
+                <h5>التكلفة الفعلية</h5>
+                <p class="fs-4 text-success">{{ "{:,.2f}".format(project.total_actual_cost) }} ريال</p>
+            </div>
+            <div class="col-md-3">
+                <h5>إجمالي المدفوع</h5>
+                <p class="fs-4 text-info">{{ "{:,.2f}".format(project.total_paid_amount) }} ريال</p>
+            </div>
+            <div class="col-md-3">
+                <h5>نسبة الإنجاز المالي</h5>
+                <div class="progress mt-2" style="height: 25px;">
+                    <div class="progress-bar bg-success" role="progressbar" style="width: {{ project.financial_completion_percentage }}%">
+                        {{ "{:.1f}%".format(project.financial_completion_percentage) }}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <div class="d-flex justify-content-between mt-4">
     <a href="{{ url_for('project.get_projects') }}" class="btn btn-secondary">
@@ -161,7 +192,6 @@
     {% endif %}
 </div>
 
-<!-- Modal for Item Details -->
 <div class="modal fade" id="itemDetailsModal" tabindex="-1">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
@@ -298,7 +328,6 @@
     </div>
 </div>
 
-<!-- Modal for Delete Confirmation -->
 <div class="modal fade" id="deleteItemModal" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -425,4 +454,3 @@
     });
 </script>
 {% endblock %}
-<script src="https://sites.super.myninja.ai/_assets/ninja-daytona-script.js"></script>
