--- a/templates/items/index.html
+++ b/templates/items/index.html
@@ -89,7 +89,8 @@
                         <tr class="table-primary">
                             <th colspan="5">الإجمالي</th>
                             <th class="text-end">{{ "{:,.2f}".format(project.total_contract_cost) }}</th>
-                            <th colspan="2"></th> <th class="text-end">{{ "{:,.2f}".format(project.total_actual_cost) if project.total_actual_cost else "-" }}</th>
+                            <th colspan="2"></th>
+                            <th class="text-end">{{ "{:,.2f}".format(project.total_actual_cost) if project.total_actual_cost else "-" }}</th>
                             <th class="text-end {{ 'text-success' if project.total_savings > 0 else 'text-danger' if project.total_savings < 0 else '' }}">
                                 {{ "{:,.2f}".format(project.total_savings) if project.total_savings != 0 else "-" }}
                             </th>
@@ -150,20 +151,26 @@
         <h3 class="mb-0">الملخص المالي للمشروع</h3>
     </div>
     <div class="card-body">
-        <div class="row">
-            <div class="col-md-3">
+        <div class="row text-center">
+            <div class="col">
                 <h5>التكلفة التعاقدية</h5>
                 <p class="fs-4 text-primary">{{ "{:,.2f}".format(project.total_contract_cost) }} ريال</p>
             </div>
-            <div class="col-md-3">
+            <div class="col">
                 <h5>التكلفة الفعلية</h5>
                 <p class="fs-4 text-success">{{ "{:,.2f}".format(project.total_actual_cost) }} ريال</p>
             </div>
-            <div class="col-md-3">
+            <div class="col">
                 <h5>إجمالي المدفوع</h5>
                 <p class="fs-4 text-info">{{ "{:,.2f}".format(project.total_paid_amount) }} ريال</p>
             </div>
-            <div class="col-md-3">
+            <div class="col">
+                <h5>إجمالي الربح / الخسارة</h5>
+                <p class="fs-4 {{ 'text-success' if project.total_savings >= 0 else 'text-danger' }}">
+                    {{ "{:,.2f}".format(project.total_savings) }} ريال
+                </p>
+            </div>
+            <div class="col">
                 <h5>نسبة الإنجاز المالي</h5>
                 <div class="progress mt-2" style="height: 25px;">
                     <div class="progress-bar bg-success" role="progressbar" style="width: {{ project.financial_completion_percentage }}%">
